--- a/www/templates/choix_ligne.html
+++ b/www/templates/choix_ligne.html
@@ -1,25 +1,25 @@
-<ion-view view-title="Ligne">
+<ion-view view-title="Ma collection">
   <ion-content>
     <ul class="list">
 	  	
 	  		<a class=" item item-icon-right " href="#/app/lignex">
-			   <i class="icon ion-ios-star-outline" style="color:#ffd54f !important;"></i>
-			   Ligne 1
+			   <i class="icon ion-ios-plus" style="color:#ffd54f !important;"></i>
+			   Nom de la Collection 1
 			</a>	
 
 			<a class=" item item-icon-right " href="#/app/lignex">
-			   <i class="icon ion-ios-star-outline" style="color:#ffd54f !important;"></i>
-			   Ligne 2
+			   <i class="icon ion-ios-plus" style="color:#ffd54f !important;"></i>
+			   Nom de la Collection 2
 			</a>
 
 			<a class=" item item-icon-right " href="#/app/lignex">
-			   <i class="icon ion-ios-star-outline" style="color:#ffd54f !important;"></i>
-			   Ligne 3
+			   <i class="icon ion-ios-plus" style="color:#ffd54f !important;"></i>
+			    Nom de la Collection 3
 			</a>
 
 			<a class=" item item-icon-right " href="#/app/lignex">
-			   <i class="icon ion-ios-star-outline" style="color:#ffd54f !important;"></i>
-			   Ligne 4
+			   <i class="icon ion-ios-plus" style="color:#ffd54f !important;"></i>
+			    Nom de la Collection 4
 			</a>						
 	</ul>
 	
