--- a/www/templates/liste_trajets.html
+++ b/www/templates/liste_trajets.html
@@ -1,10 +1,9 @@
-
-<ion-view view-title=" Resultats ">
+º		
+<ion-view view-title=" Résultats ">
   <ion-content>
-    <br>
-
+    
     <div class="list">
-
+<!--
 	    <div class=" item header_item">
 
 	    	<div class = "item-input">
@@ -33,18 +32,7 @@
 		        </label>
 
 		    </div>
-<!--
-			<div>
-				<button class="button button-stable">départ</button>
-				<button class="button button-dark" style="color:white !important;" >arrivé</button>
 
-				<div class=" item-input-inset">
-					<label class="item-input-wrapper">
-			          <input type="time" placeholder="">
-			        </label>
-				</div>
-			</div>
--->
 
 		</div>	
 
@@ -91,13 +79,11 @@
         	</a>
 			
 		</div>
-
-
-
+-->
 		<div class="card">
 			<div class="item item-title">
 			  
-			     Dans 15 min
+			     Itinéraire 1
 			    <span class="item-note">
 			       <i class="icon ion-alert-circled"></i>retard 5min
 			    </span>
@@ -106,29 +92,74 @@
 			<div class="item item-trajet item-text-wrap">
 				<center>
 					<a href="#/app/trajet">
-					9:30 <i class="icon ion-ios-location "></i>
+					9:36 <i class="icon ion-ios-location "></i>
 
-					<svg width="250px" height="3px" viewBox="0 0 347 3" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+					<svg width="200px" height="3px" viewBox="0 0 347 3" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 				    <path class="animated-svg"  d="M1.5,1.5 L345.5,1.5" id="Line" stroke="#005064" stroke-width="3"></path>
 				    </svg>
 
-				   	<i class="icon ion-ios-location "></i>12:30
-				   	<p>Dure: 10 min</p>
+				   	<i class="icon ion-ios-location "></i>9:42
+				   	<p>Durée : 06 min</p>
 
 				   	<img src="http://www.auvergne-mobilite.fr/design/default/base/bundles/canaltpfrontcore/images/modes/bus.png" title="Bus" alt="Bus">
-					<span class="ctp-line-code" style="background-color:#FFCC00; color:#FFFFFF">L</span>
+					<span class="ctp-line-code" style="background-color:#8F5400; color:#FFFFFF">G</span>
 					</a>
 
 
 					<p>
 				      <a href="#/app/trajet"> <i class="icon ion-heart"></i></a>
-				      <a href="#/app/trajet" class="subdued">5 Comments</a>
+				      <a href="#/app/trajet" class="subdued">3 Commentaires</a>
 				    </p>
 				</center>
 				
 				<a href="#/app/trajet" class="item-icon-right" >
 					<div class="icon">
-		               <span class=" ion-heart"> </span>
+		               <span class=" ion-ios-heart-outline"> </span>
+		               &nbsp; &nbsp; &nbsp;
+		               <span class=" ion-chevron-right"></span>
+	        		</div>
+        	    </a>
+				
+			</div>
+			
+
+		</div>
+
+		<div class="card">
+			<div class="item item-title">
+			  
+			     Itinéraire 2
+			    <span class="item-note">
+			       <i class="icon ion-alert-circled"></i>retard 2min
+			    </span>
+			</div>
+
+			<div class="item item-trajet item-text-wrap">
+				<center>
+					<a href="#/app/trajet">
+					9:38 <i class="icon ion-ios-location "></i>
+
+					<svg width="200px" height="3px" viewBox="0 0 347 3" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+				    <path class="animated-svg"  d="M1.5,1.5 L345.5,1.5" id="Line" stroke="#005064" stroke-width="3"></path>
+				    </svg>
+
+				   	<i class="icon ion-ios-location "></i>9:49
+				   	<p>Durée : 11 min</p>
+
+				   	<img src="http://www.auvergne-mobilite.fr/design/default/base/bundles/canaltpfrontcore/images/modes/bus.png" title="Bus" alt="Bus">
+					<span class="ctp-line-code" style="background-color:#005AAA; color:#FFFFFF">I</span>
+					</a>
+
+
+					<p>
+				      <a href="#/app/trajet"> <i class="icon ion-heart "></i></a>
+				      <a href="#/app/trajet" class="subdued">5 Commentaires</a>
+				    </p>
+				</center>
+				
+				<a href="#/app/trajet" class="item-icon-right" >
+					<div class="icon">
+		               <span class="ion-ios-heart"> </span>
 		               &nbsp; &nbsp; &nbsp;
 		               <span class=" ion-chevron-right"></span>
 	        		</div>
@@ -138,6 +169,50 @@
 			
 
 		</div>	
+
+		<div class="card">
+			<div class="item item-title">
+			     Itinéraire 3
+			    <span class="item-note">
+			       <i class="icon ion-alert-circled"></i>retard 7min
+			    </span>
+			</div>
+
+			<div class="item item-trajet item-text-wrap">
+				<center>
+					<a href="#/app/trajet">
+					10:06 <i class="icon ion-ios-location "></i>
+
+					<svg width="200px" height="3px" viewBox="0 0 347 3" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+				    <path class="animated-svg"  d="M1.5,1.5 L345.5,1.5" id="Line" stroke="#005064" stroke-width="3"></path>
+				    </svg>
+
+				   	<i class="icon ion-ios-location "></i>10:15
+				   	<p>Durée : 9 min</p>
+
+				   	<img src="http://www.auvergne-mobilite.fr/design/default/base/bundles/canaltpfrontcore/images/modes/bus.png" title="Bus" alt="Bus">
+					<span class="ctp-line-code" style="background-color:#FFCC00; color:#FFFFFF">L</span>
+					</a>
+
+
+					<p>
+				      <a href="#/app/trajet"> <i class="icon ion-heart"></i></a>
+				      <a href="#/app/trajet" class="subdued">2 Commentaires</a>
+				    </p>
+				</center>
+				
+				<a href="#/app/trajet" class="item-icon-right" >
+					<div class="icon">
+		               <span class="ion-ios-heart-outline"> </span>
+		               &nbsp; &nbsp; &nbsp;
+		               <span class=" ion-chevron-right"></span>
+	        		</div>
+        	    </a>
+				
+			</div>
+			
+
+		</div>
 
       
       
