--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -27,27 +27,24 @@
             <span class="input-label">Départ</span>
             <div class="item-input-inset">
               <label class="item-input-wrapper">
-                 <span> De| </span>
+                 
                 <input type="search" placeholder="Search">
               </label>
+             
               <i class="icon ion-ios-location location"></i>
             </div>
         </div>
       </div>
       
-      
-        <button class="" >
-          <i class="icon ion-arrow-swap"></i>
-        </button>
       <i class="icon ion-arrow-swap change"></i>
 
       <!--ARRIVÉ-->
       <div class="card arrive">
         <div class="item ">
-          <span class="input-label">Arrivé</span>
+          <span class="input-label">Arrivée</span>
               <div class="item-input-inset">
                 <label class="item-input-wrapper">
-                   <span> De| </span>
+                 
                   <input type="search" placeholder="Search">
                 </label>
                 <i class="icon ion-ios-location location"></i>
