--- a/www/templates/accueil.html
+++ b/www/templates/accueil.html
@@ -1,24 +1,45 @@
-<ion-view view-title="Be On Time" hide-back-button="true">
-  <ion-nav-title>
-     BeOnTime<img class='item_picto search item-icon-right' src='img/search.svg'>
-     
-    </ion-nav-title>
+<ion-view view-title="Ca vient de la Rue" hide-back-button="true" >
+  <ion-nav-title >
+     Ca vient de la Rue
+   </ion-nav-title>
 
 
     <ion-content ng-controller="MapController">
 
       <div id="map" data-tap-disabled="true"></div>
-
+      <!--
       <button ion-button color="secondary" block (click)="doPrompt()"> img signalement retard</button>
           
-      <button ion-item i (click)="closeApp()">
+      <button ion-item i ng-click="closeApp()">
               Déconnection
       </button>
-
-      <ion-fab right bottom>
-           <button class=" button-icon retard" ion-fab ><img class='retard' src='img/retard.svg'></button>
+      -->
+      <ion-fab ng-controller="problemCtrl">
+           <button class=" button-icon add" ng-click="problem()" ion-fab >
+            <i class="icon ion-plus"></i>
+          </button>
       </ion-fab>
 
+      <ion-fab ng-controller="problemCtrl">
+           <button class=" button-icon route" ng-click="problem()" ion-fab >
+            <i class="icon ion-star"></i>
+          </button>
+      </ion-fab>
+
+      <ion-fab  ng-controller="problemCtrl">
+           <button class=" button-icon art" ng-click="problem()" ion-fab >
+            <i class="icon ion-star"></i>
+          </button>
+      </ion-fab>
+<!--
+      <ion-fab left bottom>
+           <button class=" button-icon retard" ng-click="retard()" ion-fab >
+
+            <img class='retard' src='img/retard.svg' ></button>
+      </ion-fab>
+-->
     </ion-content>
+
+    
     
 </ion-view>
